[tool.poetry]
name = "iig"
version = "0.1.0"
description = "Integrating Integrated Gradients"
authors = ["Ulisse Mini <ulisse.mini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.13.1"
captum = "^0.6.0"
circrl = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
